Version 1.2.2 -- Apr 2010
------------------------------------------------------------------
+ Updated for phpws Core 2.0.0
+ PHP strict fixes
+ Some code tidy up


Version 1.2.1 -- July 2009
------------------------------------------------------------------
+ Fixed nasty bug in uninstall (thanks jtickle)


Version 1.2.0 -- Nov 2008
------------------------------------------------------------------
+ Moved readme content to README file
+ Made phpws 1.6 compatible
+ Replaced inc/init.php with inc/runtime.php
+ Now restrict read me tab to diety users only


Version 1.1.0 -- Mar 2008
------------------------------------------------------------------
Jan 30 - Mar 17
+ Added support for File Cabinet 2.0 features
+ Added support for document types to episodes
+ Improved the use of phpws key on channels and episodes, 
  allows for phpws categorization, etc
+ Some minor tweaks to view channel and episode templates
+ Added search to list and archive views
+ Resolved some validation issues with rss feed
+ Added support for Search module
+ Fixed a bug in episode delete
+ Fixed a bug in channel delete
+ Implemented short urls for episodes (if mod_rewrite is true)
+ Implimented PHPWS_Text::rewriteLink() for episode view links
  now that it handles multiple vars


Version 1.0.5 -- Jan 2008
------------------------------------------------------------------
Jan 09-11 2008
+ Added database table and class for iTunes categories
+ Improved iTunes categories functions in channel and form class
+ YOU MUST RESET ITUNES CATEGORIES IF UPGRADING


Version 1.0.4 -- Jan 2008
------------------------------------------------------------------
Jan 03-05 2008
+ Updated documentation
+ Got channel rss caching working (needs updated /core/class/cache.php)
+ Added empty message and create link, in empty channel list
+ Fixed default for approved flag for new episode by unrestricted users
+ Added podcaster block and related settings
+ Made RSS cache timeout configurable in settings tab