@@ -282,6 +282,8 @@ Please save each episode to force an update of the key file.';
 + Updated for phpws Core 2.0.0
 + PHP strict fixes
 + Some code tidy up
++ Implemented Icon class
+
 </pre>';
 
 
